--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -15,6 +15,7 @@
     padding: 15px 15px;
     position: relative;
     margin-top: 20px;
+    cursor: pointer;
 
     &-count {
       width: 25px;
