--- a/src/styles/sales.scss
+++ b/src/styles/sales.scss
@@ -1,5 +1,5 @@
 .sales {
-  margin-bottom: 167px;
+  padding-bottom: 167px;
 
   &__block {
     background: linear-gradient(262.36deg, #7D70D1 0%, #134B48 100%);
