--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -35,3 +35,10 @@
 @import "slide";
 @import "sales";
 @import "StrimHome";
+@import "begin";
+@import "lenSlide";
+@import "csgo";
+@import "whoPlay";
+@import "profGamer";
+@import "infoGamer";
+@import "lenStat";
