--- a/src/styles/filter.scss
+++ b/src/styles/filter.scss
@@ -13,5 +13,9 @@
         line-height: 21px;
         color: #F8F8F8;
         margin: 24px 0  8px 20px;
+        display: flex;
+        align-items: center;
+        column-gap: 10px;
+
     }
 }
