--- a/src/styles/streams.scss
+++ b/src/styles/streams.scss
@@ -1,7 +1,6 @@
 .streams {
-  background: url("../assets/bg-streams.png");
+  background: url("../assets/bg-streams.png") no-repeat;
   width: 100%;
-  height: 400vh;
   position: relative;
-  padding-bottom: 100px ;
+  display: flex;
 }
