--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -24,7 +24,10 @@
   display: flex;
   flex-direction: column;
 }
+@import "matchescd";
+@import "stream";
 @import "filter";
+@import "transition";
 @import "streams";
 @import "filt";
 @import "header";
