Stream watch str

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -25,6 +25,7 @@
   flex-direction: column;
 }
 @import "matchescd";
+@import "streamView";
 @import "stream";
 @import "filter";
 @import "transition";
