--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -7,15 +7,16 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    border-bottom: 4px solid rgba(196, 196, 196, 0.1);
+    text-align: center;
     border-radius: 4px;
   }
   &__desc{
     width: 33.33333%;
-
+    border-bottom: 4px solid transparent;
     font-weight: 400;
     font-size: 16px;
     line-height: 19px;
+    padding-bottom: 5px;
     color: rgba(248, 248, 248, 0.6);
     &:hover{
       color: #FAC704;
