--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -58,9 +58,12 @@
 @import "support";
 @import "form";
 @import "cabinet";
-<<<<<<< HEAD
 @import "userCabinet";
-=======
 @import "teamsTitle";
 @import "teamsSearch";
->>>>>>> d0a1d2ca026af43f662671815e52fd51b7858611
+@import "userBalance";
+@import "userOptions";
+@import "userBlackList";
+@import "userData";
+@import "userStore";
+@import "userAside";
