--- a/src/styles/userCabinet.scss
+++ b/src/styles/userCabinet.scss
@@ -1,5 +1,191 @@
 .userCabinet {
   background: linear-gradient(180deg, rgba(78, 78, 116, 0) 0%, #0C0C0E 100%);
   backdrop-filter: blur(110px);
+  margin-top: 50px;
+
+
+  &__img {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    z-index: -1;
+    position: absolute;
+    object-fit: cover;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: row;
+    column-gap: 40px;
+    justify-content: right;
+  }
+
+  &__right {
+    padding: 110px 0 80px;
+    width: calc(70% - 20px);
+    margin-right: 70px;
+  }
+
+  &__top {
+    border-bottom: 3px solid #FAC704;
+  }
+
+  &__title {
+    text-align: center;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    color: #FAC704;
+  }
+
+  &__row {
+    background: rgba(248, 248, 248, 0.05);
+    backdrop-filter: blur(60px);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 28px 51px 32px 63px;
+    align-items: center;
+    margin: 29px 0;
+
+
+    &-left {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      column-gap: 17px;
+    }
+
+    &-title {
+      font-weight: 500;
+      font-size: 24px;
+    }
+
+    &-right {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      column-gap: 20px;
+    }
+
+    &-card {
+      background: rgba(248, 248, 248, 0.1);
+      backdrop-filter: blur(5px);
+      border-radius: 4px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 11px 23px 11px 27px;
+      column-gap: 12px;
+    }
+
+    &-num {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 21px;
+      color: #F8F8F8;
+    }
+
+    &-desc {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 16px;
+    }
+  }
+
+  &__stat {
+    padding: 39px 51px 91px 63px;
+    background: rgba(248, 248, 248, 0.05);
+    backdrop-filter: blur(60px);
+    display: flex;
+    column-gap: 75px;
+    &-left {
+     width: calc(25% - 40px);
+    }
+
+    &-title{
+      font-weight: 500;
+      font-size: 24px;
+      color: #F8F8F8;
+      margin-bottom: 23px;
+    }
+
+    &-match {
+      display: flex;
+      flex-direction: column;
+      row-gap: 43px;
+    }
+
+    &-play {
+      display: flex;
+      flex-direction: column;
+      row-gap: 3px;
+    }
+
+    &-row {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+
+      &-text {
+        font-weight: 500;
+        font-size: 15px;
+        line-height: 18px;
+        color: #BFBFBF;
+      }
+
+      &-num {
+        font-weight: 500;
+        font-size: 15px;
+        color: #FAC704;
+      }
+    }
+
+
+    &-right {
+      width: calc(80% - 40px);
+      display: flex;
+      flex-direction: column;
+
+      &-static {
+        display: flex;
+        flex-direction: column;
+        row-gap: 54px;
+        align-items: center;
+      }
+
+      &-row {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        column-gap: 10px;
+      }
+
+      &-line {
+        width: 580px;
+        height: 2px;
+        background: #3F3F45;
+      }
+    }
+
+    &-list {
+      background: rgba(248, 248, 248, 0.1);
+      border-radius: 18px;
+      display: flex;
+      flex-direction: row;
+      column-gap: 20px;
+      justify-content: space-between;
+      padding: 15px 25px;
+      margin-top: 38px;
+    }
+
+    &-link {
+      font-weight: 400;
+      font-size: 14px;
+      color: #FFFFFF;
+      display: flex;
+      justify-content: center;
+    }
+  }
 
 }
