--- a/src/styles/begin.scss
+++ b/src/styles/begin.scss
@@ -24,6 +24,15 @@
     border-radius: 4px;
     border: none;
   }
+
+  &__ru {
+    background: none;
+    border: none;
+
+    option {
+      background: #3F3F45;
+    }
+  }
 }
 
 .lending {
