--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,107 +1,144 @@
 .home {
-   background: url("../assets/homebg.png") center/cover no-repeat;
-   padding: 330px 0 119px;
+  background: url("../assets/homebg.png") center/cover no-repeat;
+  padding: 330px 0 119px;
 
 
+  &__link {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 20px;
 
+    &:hover {
+      color: black;
 
-   &__title {
+      span {
+        svg {
+          fill: black !important;
+        }
+      }
+    }
+  }
+  &__linked {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    column-gap: 5px;
+
+    &:hover {
+      color: black;
+
+      span {
+        svg {
+          fill: black !important;
+        }
+      }
+    }
+  }
+
+  &__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+    margin-bottom: 74px;
+
+    &-yellow {
+      font-style: normal;
+      font-weight: 500;
+      font-size: 64px;
+      color: #FAC704;
+    }
+
+    &-text {
+      font-size: 64px;
+      font-weight: 700;
+      line-height: 75px;
+      text-align: left;
+    }
+  }
+
+  &__cards {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 36px;
+    position: relative;
+
+    &-arrow {
+      position: absolute;
+      right: -100px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &__card {
+    width: calc(33.33333% - 20px);
+
+    &-img {
+      width: 100%;
+    }
+
+    &-box {
+      background: rgba(248, 248, 248, 0.05);
+      border-top: 1px solid #FAC704;
+      padding: 8px 10px 10px 17px;
+      margin-top: -3px;
+    }
+
+    &-title {
+      font-weight: 500;
+      font-size: 18px;;
+    }
+
+    &-desc {
+      padding: 5px 0 11px;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      color: #BFBFBF;
+    }
+
+    &-info {
       display: flex;
-      justify-content: center;
-      column-gap: 20px;
-      margin-bottom: 74px;
-      &-yellow {
-         font-style: normal;
-         font-weight: 500;
-         font-size: 64px;
-         color: #FAC704;
-      }
-      &-text {
-         font-size: 64px;
-         font-weight: 700;
-         line-height: 75px;
-         text-align: left;
-      }
-   }
+      flex-direction: row;
+      justify-content: space-between;
+    }
 
-   &__cards {
+    &-user {
       display: flex;
-      flex-wrap: wrap;
-      column-gap: 30px;
-      row-gap: 36px;
-      position: relative;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      column-gap: 15px;
 
-      &-arrow {
-         position: absolute;
-         right: -100px;
-         top: 50%;
-         transform: translateY(-50%);
-      }
-   }
-
-   &__card {
-      width: calc(33.33333% - 20px);
-
-      &-img {
-         width: 100%;
+      &-name {
+        font-weight: 500;
+        font-size: 16px;
+        color: #606060;
       }
 
-      &-box {
-         background: rgba(248, 248, 248, 0.05);
-         border-top: 1px solid #FAC704;
-         padding: 8px 10px 10px 17px;
-         margin-top: -3px;
+      &-date {
+        font-weight: 500;
+        font-size: 16px;
+        color: #606060;
       }
+    }
 
-      &-title {
-         font-weight: 500;
-         font-size: 18px;;
+    &-views {
+      display: flex;
+      flex-direction: row;
+      column-gap: 10px;
+      align-items: center;
+
+      &-num {
+        font-weight: 500;
+        font-size: 16px;
+        color: #BFBFBF;
       }
-
-      &-desc{
-         padding: 5px 0 11px;
-         font-weight: 400;
-         font-size: 16px;
-         line-height: 19px;
-         color: #BFBFBF;
-      }
-
-      &-info {
-         display: flex;
-         flex-direction: row;
-         justify-content: space-between;
-      }
-
-      &-user {
-         display: flex;
-         flex-direction: row;
-         justify-content: space-between;
-         align-items: center;
-         column-gap: 15px;
-
-         &-name {
-            font-weight: 500;
-            font-size: 16px;
-            color: #606060;
-         }
-         &-date {
-            font-weight: 500;
-            font-size: 16px;
-            color: #606060;
-         }
-      }
-
-      &-views {
-         display: flex;
-         flex-direction: row;
-         column-gap: 10px;
-         align-items: center;
-
-         &-num {
-            font-weight: 500;
-            font-size: 16px;
-            color: #BFBFBF;
-         }
-      }
-   }
+    }
+  }
 }
+
+
