--- a/src/styles/slide.scss
+++ b/src/styles/slide.scss
@@ -83,9 +83,11 @@
     background: #FAC704;
     border-radius: 4px;
     border: none;
-    padding: 12px 77px;
     font-weight: 500;
     font-size: 20px;
     color: #18181B;
+    width: 100%;
+    text-align: center;
+    padding: 12px 0;
   }
 }
